PSP/examenPsp-AdrianSaavedra/RestExamen-AdrianSaavedra/src/main/java/org/example/restexamenadriansaavedra/common/errors/Rol.java
package org.example.restexamenadriansaavedra.common.errors;

public class Rol extends RuntimeException{
    public Rol(String message) {
        super(message);
    }
}
